# kosame

./: :w  CLAUDE.md  Cargo.toml  README.md  compose.yaml  rust-toolchain.toml
examples/mysql/: Cargo.toml
examples/postgres/: Cargo.toml
examples/postgres/src/: main.rs
examples/rusqlite/: Cargo.toml
examples/rusqlite/src/: main.rs
examples/tokio_postgres/: Cargo.toml
examples/tokio_postgres/src/: main.rs
kosame/: Cargo.toml
kosame/src/: client.rs  error.rs  exec.rs  execute.rs  keyword.rs  lib.rs  prelude.rs
kosame/src/driver/: mod.rs  pool.rs
kosame/src/driver/postgres/: cached_client.rs  connection.rs  macros.rs  mod.rs  pool.rs  statement_cache.rs  transaction.rs
kosame/src/driver/postgres_types/: macros.rs  mod.rs  row_count.rs  statement_cache.rs
kosame/src/driver/tokio_postgres/: cached_client.rs  connection.rs  mod.rs  raw.rs  statement_cache.rs
kosame/src/query/: mod.rs
kosame/src/query/runner/: mod.rs  (+1 more)
kosame/src/statement/: mod.rs
kosame/tests/: select.rs
kosame_cli/: Cargo.toml
kosame_cli/src/: fmt.rs  lib.rs  main.rs
kosame_cli/src/fmt/: mod.rs  visitor.rs
kosame_core/: Cargo.toml
kosame_core/src/: database.rs  driver.rs  lib.rs  runtime.rs
kosame_dsl/: Cargo.toml
kosame_dsl/src/: attribute.rs  bind_params.rs  correlations.rs  data_type.rs  doc.rs  driver.rs  inferred_type.rs  keyword.rs  lib.rs  macro_context.rs  meta.rs  pretty_print.rs  proc_macro_error.rs  quote_option.rs  scopes.rs  visit.rs  visitor.rs
kosame_dsl/src/clause/: field.rs  from.rs  group_by.rs  having.rs  limit.rs  mod.rs  offset.rs  order_by.rs  returning.rs  select.rs  set.rs  values.rs  where.rs  with.rs
kosame_dsl/src/command/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
kosame_dsl/src/expr/: binary.rs  bind_param.rs  call.rs  cast.rs  column_ref.rs  lit.rs  mod.rs  paren.rs  raw.rs  unary.rs
kosame_dsl/src/part/: alias.rs  column_list.rs  mod.rs  set_op.rs  table_alias.rs  table_path.rs  target_table.rs  type_override.rs
kosame_dsl/src/pretty/: delim.rs  delimiter.rs  macro.rs  mod.rs  printer.rs  ring_buffer.rs  rust.rs  span.rs  text.rs  token.rs  trivia.rs
kosame_dsl/src/query/: attribute.rs  field.rs  mod.rs  node.rs  node_path.rs  star.rs
kosame_dsl/src/schema/: column.rs  column_constraint.rs  relation.rs  table.rs
kosame_dsl/src/statement/: attribute.rs  mod.rs
kosame_dsl/tests/: lib.rs
kosame_dsl/tests/pretty/: delete.rs  insert.rs  mod.rs  query.rs  select.rs  table.rs  update.rs
kosame_macro/: Cargo.toml
kosame_macro/src/: attribute.rs  correlations.rs  data_type.rs  inferred_type.rs  lib.rs  parent_map.rs  path_ext.rs  quote_option.rs  scope.rs  scope_module.rs  scopes.rs  visitor.rs
kosame_macro/src/clause/: field.rs  from.rs  with.rs
kosame_macro/src/command/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
kosame_macro/src/expr/: binary.rs  bind_param.rs  call.rs  cast.rs  column_ref.rs  lit.rs  mod.rs  paren.rs  raw.rs  unary.rs
kosame_macro/src/part/: table_path.rs  target_table.rs
kosame_macro/src/query/: node.rs  node_path.rs
kosame_macro/src/statement/: command_tree.rs  mod.rs  parent_map.rs
kosame_repr/src/: ident.rs  lib.rs
kosame_repr/src/clause/: field.rs  from.rs  group_by.rs  having.rs  limit.rs  mod.rs  offset.rs  order_by.rs  set.rs  values.rs  with.rs
kosame_repr/src/command/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
kosame_repr/src/expr/: bind_param.rs  call.rs  column_ref.rs
kosame_repr/src/part/: column_list.rs  mod.rs  set_op.rs  table_alias.rs  target_table.rs
kosame_repr/src/schema/: column.rs  relation.rs  table.rs
kosame_sql/src/: dialect.rs  formatter.rs  punctuated.rs
kosame_sql/src/mssql/: mod.rs
kosame_sql/src/mysql/: mod.rs
kosame_sql/src/postgres/: mod.rs
kosame_sql/src/sqlite/: mod.rs
(+10 files in other folders)
