[workspace]
resolver = "3"
members = [
    "kosame",
    "kosame_cli",
    "kosame_dsl",
    "kosame_macro",
    "kosame_repr",
    "kosame_sql",
    "examples/postgres",
    "examples/tokio_postgres",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "Macro-based Rust ORM focused on developer ergonomics"
repository = "https://github.com/kosame-orm/kosame"
documentation = "https://docs.rs/kosame"
readme = "README.md"
license = "Apache-2.0"
keywords = ["orm", "database", "query", "postgresql", "postgres"]
publish = [
    "kosame",
    "kosame_cli",
    "kosame_dsl",
    "kosame_macro",
    "kosame_repr",
    "kosame_sql",
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"


[workspace.dependencies]
kosame = { path = "kosame", version = "0.2.0" }
kosame_dsl = { path = "kosame_dsl", version = "0.2.0" }
kosame_macro = { path = "kosame_macro", version = "0.2.0" }
kosame_repr = { path = "kosame_repr", version = "0.2.0" }
kosame_sql = { path = "kosame_sql", version = "0.2.0" }

