[package]
name = "example_rusqlite"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
kosame = { workspace = true, features = ["postgres", "serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
